<resources>
    <string name="app_name">Evaware</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_bag">Bag</string>
    <string name="log_in">Log in</string>
    <string name="login_email">Email address</string>
    <string name="button">Log in</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="email_title">Email address</string>
    <string name="password_title">Password</string>
    <string name="don_t_have_account">Don\'t have an account?</string>
    <string name="don_t_have_">Don\'t have an account? </string>
    <string name="Sign_up">
        <b>Sign up</b>
    </string>
    <string name="or_login_wi">Or Login with</string>
    <string name="bag">bag</string>
    <string name="start_shopping">Start shopping</string>
    <string-array name="rangeSlider">
        <item>0</item>
        <item>500</item>
    </string-array>
    <string name="your_bag_is_empty">your bag is empty</string>
    <string name="items_remain_in_your_bag_for_1_hour_and_then_they_re_moved_to_your_saved_items">items
        remain in your bag for 1 hour, and then they’re moved to your Saved items</string>
    <string name="surprised_image">Surprised Image</string>
    <string name="bag_item_image">bag_item_image</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="promocode">promocode</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_email">Email</string>
    <string name="email_example">example@gmail.com</string>
    <string name="create_password">Create a password</string>
    <string name="password_validate">must be 8 characters</string>
    <string name="confirm_password">Confirm password</string>
    <string name="repeat_password">repeat password</string>
    <string name="create_account">Create account</string>
    <string name="or_register_with">Or Register with</string>
    <string name="already_have_account">Already have account?</string>
    <string name="title">Email</string>
    <string name="text">example@gmail.com</string>
    <string name="title_cre">Create a password</string>
    <string name="text_cr">must be 8 characters</string>
    <string name="title_cf">Confirm password</string>
    <string name="text_rp">repeat password</string>
    <string name="button_s">Create account</string>
    <string name="or_register">Or Register with</string>
    <string name="already_hav">Already have an account? Log in</string>
    <string name="ulmo">evaware</string>
    <string name="unwatched_s">best of 2020</string>
    <string name="title_activity_payment_method">PaymentMethodActivity</string>
    <string name="facebook_app_id">760772782212581</string>
    <string name="fb_login_protocol_scheme">fb760772782212581</string>
    <string name="facebook_client_token">c03f419538b549bcaef69b2e9a5df841</string>
    <string name="web_client_id">253008480260-prv4774nkdgvs7263o3hmk6ubqaj0ur2.apps.googleusercontent.com</string>
    <string name="forgot_pass2">Don’t worry! It happens. Please enter the email associated with your account.</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="remember_password">Remember password?</string>
    <string name="please_check_your_email">Please check your email</string>
    <string name="we_have_send_a_code_to">We’ve sent a code to </string>
    <string name="sent_code_again">Sent code again </string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_description">Please type something you’ll remember</string>
    <string name="new_password">New password</string>
    <string name="password_change">Password change</string>
    <string name="password_change_description">Your password has been changed successfully.</string>
    <string name="search">Search</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="review"><u>Review</u></string>
    <string name="cell">Terms and Conditions</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="my_orders"> My orders </string>
    <string name="time_1"> Yesterday, 10:00 am </string>
    <string name="stt_1"> Delivering </string>
    <string name="price"> $420.00 </string>
    <string name="product_code"> #1233 </string>
    <string name="time_2"> December 25 </string>
    <string name="stt_2"> Delivered </string>
    <string name="price_"> $450.00 </string>
    <string name="product_code_"> #1234 </string>
    <string name="your_review">your_review</string>
    <string name="sent_review">Send review</string>
    <string name="expired_date">Expiration date</string>
    <string name="new_card">new card</string>
    <string name="save_card">save card</string>
    <string name="country_image_description">Country name</string>
</resources>
