<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    tools:context=".presentation.auth.ForgotPasswordFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:fontFamily="@font/lexend_semibold"
        android:textSize="@dimen/heading_1"/>
    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass2"
        android:fontFamily="@font/lexend"
        android:textSize="@dimen/body_1"
        android:textColor="@color/giratina_500"/>
    <TextView
        android:paddingTop="24dp"
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lexend"
        android:text="@string/email_title"
        android:textColor="@color/black"
        android:textSize="@dimen/body_1" />

    <EditText
        android:id="@+id/edt_email_address"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_code"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="Verify"
        android:layout_marginVertical="24dp"
        tools:layout_editor_absoluteX="16dp" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">



    </FrameLayout>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/lexend"
            android:gravity="center"
            android:text="@string/remember_password" />
        <TextView
            android:id="@+id/nav_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/log_in" />
    </LinearLayout>
</LinearLayout>