<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.auth.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend_semibold"
            android:lineSpacingExtra="6sp"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/heading_1" />
        <TextView
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_description"
            android:fontFamily="@font/lexend"
            android:textSize="@dimen/body_1"
            android:textColor="@color/giratina_500"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/fab_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1" />

            <EditText
                android:id="@+id/edt_new_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:hint="@string/password_validate"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/fab_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1" />

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_password"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lexend_semibold"
            android:text="@string/reset_password"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/fab_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:text="@string/already_have_account" />

            <TextView
                android:id="@+id/tv_nav_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/log_in" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>