<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.auth.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back_to_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingHorizontal="10dp"

                android:src="@drawable/arrow_left" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="55dp"

                android:layout_height="55dp"
                android:layout_gravity="end"
                android:src="@drawable/star_8" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend_semibold"
            android:lineSpacingExtra="6sp"
            android:text="@string/sign_up"
            android:textColor="@color/black"

            android:textSize="@dimen/heading_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/signup_email"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1" />

            <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:hint="@string/email_example"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <ImageView
                android:id="@+id/email_icon_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_checked"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/create_password"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:hint="@string/password_validate"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1" />

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lexend_semibold"
            android:text="@string/create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/fab_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:paddingHorizontal="5dp"
                android:text="@string/or_register_with" />

            <View
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <include
            android:id="@+id/third_parties"
            layout="@layout/login_with_other" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:text="@string/already_have_account" />

            <TextView
                android:id="@+id/tv_nav_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/log_in" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>