<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    tools:context=".presentation.auth.ForgotPasswordCodeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_check_your_email"
        android:fontFamily="@font/lexend_semibold"
        android:textSize="@dimen/heading_1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/lexend"
            android:gravity="center"
            android:text="@string/we_have_send_a_code_to" />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/email_example" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="@dimen/margin_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText1"
            style="@style/EditTextPinStyle"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/editText2"
            style="@style/EditTextPinStyle"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/editText3"
            style="@style/EditTextPinStyle"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/editText4"
            style="@style/EditTextPinStyle"
            android:layout_weight="1"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_code"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="Send code"
        android:layout_marginVertical="@dimen/margin_vertical"
        tools:layout_editor_absoluteX="16dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/sent_code_again" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/lexend"
            android:gravity="center"
            android:text="00:20" />

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/lexend"
            android:gravity="center"
            android:text="@string/remember_password" />
        <TextView
            android:id="@+id/nav_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/log_in" />
    </LinearLayout>
</LinearLayout>