<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.auth.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back_to_previous"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingHorizontal="10dp"
                android:src="@drawable/arrow_left" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="55dp"

                android:layout_height="55dp"
                android:layout_gravity="end"
                android:src="@drawable/star_8" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend_semibold"
            android:lineSpacingExtra="6sp"
            android:text="@string/log_in"
            android:textColor="@color/black"

            android:textSize="@dimen/heading_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/login_email"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend"
                android:text="@string/password_title"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/EditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend"
            android:gravity="end"
            android:clickable="true"
            android:text="@string/forgot_pass"
            android:textSize="@dimen/body_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lexend_semibold"
            android:text="@string/log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/fab_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:paddingHorizontal="5dp"
                android:text="Or Login with" />

            <View
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <include layout="@layout/login_with_other" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:gravity="center"
                android:text="@string/don_t_have_account" />
            <TextView
                android:id="@+id/nav_to_signup"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_medium"
                android:text="@string/sign_up"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>